--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>"Snitches getting stitches"</title>
+  <title>"Excursion"</title>
   <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h1>FirstName LastName</h1>
-<p>I'm learning to code on Codecademy! My goals include:</p>
-<ul>
-  <li>Learn to code</li>
-  <li>Start a company</li>
-  <li>Help the world</li>
-</ul>
-<p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
-
-
+  <h1>Discover hidden places in the world around you</h1>
+  <a href="#">Download Excursion (Coming soon!)</a>
 </body>
 </html>
