--- a/index.html
+++ b/index.html
@@ -2,27 +2,29 @@
 <html>
 <head>
   <title>"Excursion"</title>
-  <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
+  <link href="excursion/resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
   <div class="header">
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming soon!)</a><br/>
+    <a href="#">Download Excursion (Coming soon!)</a><br/><br/>
     <video source src="excursion/resources/videos/excursion.mp4" autoplay type="video/mp4"> </video>
   </div>
 
   <div class="presentation">
     <h1>Your personal travel guide</h1>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"/><br/><br/>
   </div>
 
   <div class="comingsoon">
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png"/><br/>
     <h1>Coming Soon for iPhone and Android</h1>
     <a href="./index.html">Download Excursion (Coming soon!)</a>
   </div>
+  <footer>© Excursion</footer>
+
 
 </body>
 </html>
